feat(omni_remote_cache_client): add tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -165,6 +165,7 @@ omni_execution_plan = { path = "./crates/omni_execution_plan" }
 omni_task_context = { path = "./crates/omni_task_context" }
 omni_remote_cache_service = { path = "./services/omni_remote_cache_service" }
 omni_remote_cache_storage = { path = "./crates/omni_remote_cache_storage" }
+omni_remote_cache_client = { path = "./crates/omni_remote_cache_client" }
 axum = { version = "^0.8.4", features = ["macros", "http2", "multipart"] }
 tower = { version = "^0.5.2" }
 tower-http = { version = "^0.6.6", features = ["trace", "catch-panic"] }
