feat: utilize RemoteCacheClient in omni_cache

--- a/crates/omni_cache/Cargo.toml
+++ b/crates/omni_cache/Cargo.toml
@@ -43,6 +43,9 @@ omni_execution_plan = { workspace = true }
 omni_task_context = { workspace = true }
 omni_configurations = { workspace = true }
 omni_core = { workspace = true }
+omni_remote_cache_client = { workspace = true }
+flate2 = { workspace = true }
+tar = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
