--- a/crates/omni_cli_core/project.omni.yaml
+++ b/crates/omni_cli_core/project.omni.yaml
@@ -9,6 +9,7 @@ dependencies:
   - omni_context
   - omni_task_executor
   - omni_task_context
+  - omni_setup
   - env_loader
   - omni_expressions
   - config_utils
