--- a/crates/omni_context/Cargo.toml
+++ b/crates/omni_context/Cargo.toml
@@ -47,6 +47,7 @@ shadow-rs = { workspace = true }
 owo-colors = { workspace = true }
 omni_tracing_subscriber = { workspace = true }
 omni_task_context = { workspace = true }
+omni_remote_cache_client = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
