--- a/Cargo.toml
+++ b/Cargo.toml
@@ -166,6 +166,7 @@ omni_task_context = { path = "./crates/omni_task_context" }
 omni_remote_cache_service = { path = "./services/omni_remote_cache_service" }
 omni_remote_cache_storage = { path = "./crates/omni_remote_cache_storage" }
 omni_remote_cache_client = { path = "./crates/omni_remote_cache_client" }
+omni_setup = { path = "./crates/omni_setup" }
 axum = { version = "^0.8.4", features = ["macros", "http2", "multipart"] }
 tower = { version = "^0.5.2" }
 tower-http = { version = "^0.6.6", features = ["trace", "catch-panic"] }
