--- a/crates/omni_context/project.omni.yaml
+++ b/crates/omni_context/project.omni.yaml
@@ -12,6 +12,7 @@ dependencies:
   - omni_test_utils
   - omni_tracing_subscriber
   - omni_task_context
+  - omni_remote_cache_client
   - trace
   - system_traits
   - env
