--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
     "dependencies": {
         "@repo/biome-config": "workspace:*",
         "@repo/tsconfig": "workspace:*",
-        "@biomejs/biome": "^2.2.4",
+        "@biomejs/biome": "^2.2.5",
         "@repo/apply-version": "workspace:*",
-        "vite": "^7.1.5",
+        "@repo/summarize-results": "workspace:*",
+        "vite": "^7.1.9",
         "vitest": "^3.2.4",
-        "typescript": "^5.9.2"
+        "typescript": "^5.9.3"
     },
-    "packageManager": "bun@1.2.23",
+    "packageManager": "bun@1.3.0",
     "workspaces": [
         "packages/*",
         "scripts/*",
