--- a/scripts/summarize-results/package.json
+++ b/scripts/summarize-results/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@repo/apply-version",
+    "name": "@repo/summarize-results",
     "version": "0.0.0-semantically-released",
     "scripts": {
         "build": "bun run ./build.ts"
@@ -13,9 +13,7 @@
         "typescript": "^5.9.3",
         "@types/node": "24.7.2",
         "@types/bun": "^1.3.0",
-        "ignore-walk": "^8.0.0",
-        "@types/ignore-walk": "^4.0.3",
-        "simple-git": "^3.28.0",
+        "zod": "^4.1.12",
         "commander": "^14.0.1",
         "@commander-js/extra-typings": "14.0.0"
     }
