chore: generate script build [skip ci]

--- a/.github/actions/setup-tools/action.yaml
+++ b/.github/actions/setup-tools/action.yaml
@@ -10,7 +10,7 @@ inputs:
     required: false
     default: "false"
   install-rust-target:
-    description: "Install Rust target director"
+    description: "Install Rust target directory"
     required: false
     default: "false"
   install-bun:
