--- a/.github/actions/determine-build-steps/action.yaml
+++ b/.github/actions/determine-build-steps/action.yaml
@@ -56,7 +56,7 @@ runs:
         # 3. Output the multiline content
         cat result-summary.json >> $GITHUB_OUTPUT
         # 4. End the multiline variable setting with the delimiter
-        echo "\nEOF" >> $GITHUB_OUTPUT
+        echo -e "\nEOF" >> $GITHUB_OUTPUT
         cat $GITHUB_OUTPUT
 
     - name: Run Core JS Logic
