ci: add bun install to js github actions

--- a/.github/actions/determine-build-steps/action.yaml
+++ b/.github/actions/determine-build-steps/action.yaml
@@ -59,6 +59,12 @@ runs:
         echo -e "\nEOF" >> $GITHUB_OUTPUT
         cat $GITHUB_OUTPUT
 
+    - name: Install JS Actions NPM Dependencies
+      shell: bash
+      run: |
+        cd .github/actions/determine-build-steps-js
+        bun install
+
     - name: Run Core JS Logic
       id: determine
       uses: ./.github/actions/determine-build-steps-js
