--- a/crates/omni_task_executor/Cargo.toml
+++ b/crates/omni_task_executor/Cargo.toml
@@ -47,3 +47,4 @@ omni_tracing_subscriber = { workspace = true }
 crossbeam-channel = { workspace = true }
 omni_execution_plan = { workspace = true }
 omni_task_context = { workspace = true }
+omni_collector = { workspace = true }
