--- a/.github/actions/determine-build-steps/action.yaml
+++ b/.github/actions/determine-build-steps/action.yaml
@@ -42,10 +42,6 @@ runs:
       shell: ${{ inputs.shell }}
       run: omni run -dL --result result.json ${{ inputs.omni-run }}
 
-    - name: Show result.json
-      shell: bash
-      run: cat result.json
-
     - name: Summarize Dry Run Result
       shell: ${{ inputs.shell }}
       run: bun run ./scripts/summarize-results/bin/index.js result.json -o result-summary.json
@@ -54,12 +50,9 @@ runs:
       id: load_result
       shell: bash
       run: |
-        # 1. Define a unique delimiter (e.g., EOF)
-        # 2. Start the multiline variable setting with the delimiter
+        cat result-summary.json
         echo "build_data_json<<EOF" >> $GITHUB_OUTPUT
-        # 3. Output the multiline content
         cat result-summary.json >> $GITHUB_OUTPUT
-        # 4. End the multiline variable setting with the delimiter
         echo -e "\nEOF" >> $GITHUB_OUTPUT
 
     - name: Install JS Actions NPM Dependencies
