--- a/crates/omni_generator/Cargo.toml
+++ b/crates/omni_generator/Cargo.toml
@@ -15,12 +15,12 @@ path = "src/lib.rs"
 
 [features]
 default = ["enable-tracing"]
-enable-tracing = ["trace/enabled"]
+enable-tracing = ["trace/enabled", "dep:tracing"]
 
 [dependencies]
 thiserror = { workspace = true }
 eyre = { workspace = true }
 strum = { workspace = true }
-trace = { workspace = true, optional = true }
+trace = { workspace = true }
 tracing = { workspace = true, optional = true }
 tera = { workspace = true }
