--- a/.github/workflows/preview-site.yaml
+++ b/.github/workflows/preview-site.yaml
@@ -51,7 +51,7 @@ jobs:
         run: vercel pull --yes --environment=preview --token=${{ env.VERCEL_TOKEN }}
 
       - name: Generate Docs
-        run: omni run -p '@repo/site' build
+        run: omni run -p '@omni-oss/site' build
 
       - name: Publish Docs
         run: vercel deploy --prebuilt --token=${{ env.VERCEL_TOKEN }} --cwd ./apps/site
