--- a/apps/site/project.omni.yaml
+++ b/apps/site/project.omni.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/project-latest.json
-name: "@repo/site"
+name: "@omni-oss/site"
 
 extends:
   - "@workspace/omni/presets/ts-app.omni.yaml"
