--- a/packages/system-interface/package.json
+++ b/packages/system-interface/package.json
@@ -1,13 +1,20 @@
 {
-    "name": "@omni-oss/omni-remote-cache-service-tests",
+    "name": "@omni/system-interface",
     "version": "0.0.0-semantically-released",
-    "dependencies": {},
+    "exports": {
+        ".": "./src/index.ts"
+    },
+    "dependencies": {
+        "memfs": "^4.49.0"
+    },
     "devDependencies": {
         "@omni-oss/tsconfig": "workspace:*",
         "@omni-oss/vite-config": "workspace:*",
         "vite": "^7.1.9",
         "vitest": "^3.2.4",
         "typescript": "^5.9.3",
-        "@types/node": "24.7.2"
+        "@types/node": "24.7.2",
+        "@types/bun": "^1.3.0",
+        "@types/deno": "^2.5.0"
     }
 }
