--- a/packages/system-interface/project.omni.yaml
+++ b/packages/system-interface/project.omni.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/project-latest.json
-name: "@omni-oss/bridge-rpc"
+name: "@omni-oss/system-interface"
 
 extends:
   - "@workspace/omni/presets/ts-lib.omni.yaml"
