--- a/scripts/apply-version/project.omni.yaml
+++ b/scripts/apply-version/project.omni.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/project-latest.json
-name: "@repo/apply-version"
+name: "@omni-oss/apply-version"
 
 extends:
   - "@workspace/omni/presets/ts-script.omni.yaml"
