--- a/scripts/summarize-results/project.omni.yaml
+++ b/scripts/summarize-results/project.omni.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/project-latest.json
-name: "@repo/summarize-results"
+name: "@omni-oss/summarize-results"
 
 extends:
   - "@workspace/omni/presets/ts-script.omni.yaml"
