feat: add initial omni_generator_configurations crate implementation

--- a/crates/omni_cli_core/project.omni.yaml
+++ b/crates/omni_cli_core/project.omni.yaml
@@ -10,6 +10,8 @@ dependencies:
   - omni_task_executor
   - omni_task_context
   - omni_setup
+  - omni_configurations
+  - omni_generator_configurations
   - env_loader
   - omni_expressions
   - config_utils
