feat: secure storage for remote cache config

--- a/crates/omni_context/Cargo.toml
+++ b/crates/omni_context/Cargo.toml
@@ -49,6 +49,7 @@ omni_tracing_subscriber = { workspace = true }
 omni_task_context = { workspace = true }
 omni_remote_cache_client = { workspace = true }
 omni_execution_plan = { workspace = true }
+omni_setup = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
