--- a/Cargo.toml
+++ b/Cargo.toml
@@ -166,6 +166,7 @@ omni_task_context = { path = "./crates/omni_task_context" }
 omni_remote_cache_service = { path = "./services/omni_remote_cache_service" }
 omni_remote_cache_storage = { path = "./crates/omni_remote_cache_storage" }
 omni_remote_cache_client = { path = "./crates/omni_remote_cache_client" }
+omni_file_data_serde = { path = "./crates/omni_file_data_serde" }
 omni_setup = { path = "./crates/omni_setup" }
 omni_generator_configurations = { path = "./crates/omni_generator_configurations" }
 axum = { version = "^0.8.6", features = ["macros", "http2", "multipart"] }
@@ -203,6 +204,10 @@ omni_path_utils = { path = "./crates/omni_path_utils" }
 async-stream = { version = "^0.3.6" }
 flate2 = { version = "^1.1.4", features = ["zlib-rs"], default-features = false }
 tar = { version = "^0.4.44" }
+keyring = { version = "^3.6.3", features = ["apple-native", "linux-native", "windows-native"] }
+machine-uid = { version = "^0.5.3" }
+rand = { version = "^0.9.2" }
+ring = { version = "^0.17.14" }
 
 [profile.release]
 incremental = true
