--- a/crates/omni_file_data_serde/Cargo.toml
+++ b/crates/omni_file_data_serde/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "omni_setup"
+name = "omni_file_data_serde"
 rust-version.workspace = true
 edition.workspace = true
 version.workspace = true
@@ -17,16 +17,11 @@ strum = { workspace = true }
 trace = { workspace = true }
 tracing = { workspace = true, optional = true }
 serde = { workspace = true }
-omni_configurations = { workspace = true }
-omni_remote_cache_client = { workspace = true }
-derive_builder = { workspace = true }
-derive-new = { workspace = true }
-keyring = { workspace = true }
-machine-uid = { workspace = true }
-rand = { workspace = true }
-ring = { workspace = true }
-base64 = { workspace = true }
+serde_norway = { workspace = true }
+toml = { workspace = true }
+serde_json = { workspace = true }
 rmp-serde = { workspace = true }
+system_traits = { workspace = true, features = ["memory-sync", "memory-async"] }
+
+[dev-dependencies]
 tokio = { workspace = true }
-omni_file_data_serde = { workspace = true }
-system_traits = { workspace = true, features = ["memory-async", "memory-sync", "real-sync", "real-async-tokio"] }
