feat: implement --scm-affected flag

--- a/crates/omni_cli_core/Cargo.toml
+++ b/crates/omni_cli_core/Cargo.toml
@@ -92,6 +92,8 @@ humantime = { workspace = true }
 itertools = { workspace=true }
 omni_task_context = { workspace = true }
 omni_setup = { workspace = true }
+omni_scm = { workspace = true }
+omni_execution_plan = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
