--- a/crates/omni_scm/project.omni.yaml
+++ b/crates/omni_scm/project.omni.yaml
@@ -1,14 +1,9 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/project-latest.json
-name: omni_execution_plan
+name: omni_scm
 
 extends:
   - "@workspace/omni/presets/rust-lib.omni.yaml"
 
 dependencies:
   - omni_configurations
-  - omni_core
-  - omni_expressions
-  - omni_scm
-  - omni_types
-  - config_utils
-  - maps
+  - omni_remote_cache_client
