fix: dependency cycle

--- a/crates/omni_generator_configurations/project.omni.yaml
+++ b/crates/omni_generator_configurations/project.omni.yaml
@@ -5,7 +5,7 @@ extends:
 
 dependencies:
   - omni_types
-  - omni_generator_configurations
+  - omni_generator
   - config_utils
   - omni_core
   - maps
