feat: modify generator configuration

--- a/generators/crate/generator.omni.yaml
+++ b/generators/crate/generator.omni.yaml
@@ -1,22 +1,21 @@
-# yaml-language-server: $schema=../../artifacts/json-schemas/generator.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/generator-latest.json
 name: crate
 
 prompts:
-  - type: boolean
+  - type: checkbox
     name: use-tracing
     message: Use tracing
     default: true
-  - type: options
+  - type: select
     name: crate-type
     message: Crate type
-    choices:
-      - bin
-      - lib
+    options:
+      - name: Library
+        value: lib
+      - name: Binary
+        value: bin
   - type: text
     name: crate-name
     message: Crate name
     pattern: ^[a-zA-Z_]{1}[a-zA-Z0-9_]*$
     hint: Must start with a letter and contain only letters, numbers and underscores
-
-files:
-  - files/*
