--- a/crates/omni_prompt/project.omni.yaml
+++ b/crates/omni_prompt/project.omni.yaml
@@ -1,10 +1,9 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/project-latest.json
-name: omni_generator
+name: omni_prompt
 
 extends:
   - "@workspace/omni/presets/rust-lib.omni.yaml"
 
 dependencies:
-  - omni_generator_configurations
-  - system_traits
   - maps
+  - sets
