--- a/generators/crate/generator.omni.yaml
+++ b/generators/crate/generator.omni.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/generator-latest.json
+# yaml-language-server: $schema=../../.artifacts/generator.json
 name: crate
 
 prompts:
@@ -7,7 +7,7 @@ prompts:
     message: Use tracing
     default: true
   - type: select
-    name: crate-type
+    name: crate_type
     message: Crate type
     options:
       - name: Library
@@ -15,7 +15,9 @@ prompts:
       - name: Binary
         value: bin
   - type: text
-    name: crate-name
+    name: crate_name
     message: Crate name
-    pattern: ^[a-zA-Z_]{1}[a-zA-Z0-9_]*$
     hint: Must start with a letter and contain only letters, numbers and underscores
+    validate:
+      - condition: "{{ !(value | is_empty) }}"
+        error_message: Cannot be empty
