--- a/crates/omni_cli_core/Cargo.toml
+++ b/crates/omni_cli_core/Cargo.toml
@@ -80,6 +80,7 @@ num_cpus = { workspace = true }
 omni_process = { workspace = true }
 omni_configurations = { workspace = true }
 omni_generator_configurations = { workspace = true }
+omni_generator = { workspace = true }
 omni_context = { workspace = true }
 omni_task_executor = { workspace = true }
 clap_declspec = { workspace = true }
