--- a/crates/serde_validate/Cargo.toml
+++ b/crates/serde_validate/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "omni_generator"
+name = "serde_validate"
 authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
@@ -23,11 +23,7 @@ eyre = { workspace = true }
 strum = { workspace = true }
 trace = { workspace = true }
 tracing = { workspace = true, optional = true }
-tera = { workspace = true }
 derive-new = { workspace = true }
-omni_generator_configurations = { workspace = true }
-omni_prompt = { workspace = true }
 system_traits = { workspace = true }
-requestty = { workspace = true }
-value-bag = { workspace = true }
-maps = { workspace = true }
+serde = { workspace = true }
+schemars = { workspace = true }
