--- a/crates/serde_validate/project.omni.yaml
+++ b/crates/serde_validate/project.omni.yaml
@@ -1,10 +1,5 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/project-latest.json
-name: omni_generator
+name: serde_validate
 
 extends:
   - "@workspace/omni/presets/rust-lib.omni.yaml"
-
-dependencies:
-  - omni_generator_configurations
-  - system_traits
-  - maps
