--- a/crates/omni_serde_validators/project.omni.yaml
+++ b/crates/omni_serde_validators/project.omni.yaml
@@ -1,11 +1,8 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/project-latest.json
-name: omni_prompt
+name: omni_serde_validators
 
 extends:
   - "@workspace/omni/presets/rust-lib.omni.yaml"
 
 dependencies:
-  - omni_serde_validators
-  - maps
-  - sets
-  - system_traits
+  - omni_serde_validate
